app/assets/stylesheets/plate-map/plate-layout.css
@import url(http://fonts.googleapis.com/css?family=Roboto);

.plate-setup-container {
  width: 1024px;
  height: 768px;
  position: relative;
  float: left;
}

.plate-setup-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  flex-direction: column;
  background-color: #f5f5f5;
}

.plate-setup-top-section {
  height: 560px;
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.plate-setup-top-left {
  width: 674px;
  top: 0;
  bottom: 0;
  position: absolute;
}

.plate-setup-top-right {
  left: 674px;
  top: 0;
  bottom: 0;
  right: 0;
  position: absolute;
}

.plate-setup-overlay-container {
  height: 32px;
  top: 10px;
  left: 16px;
  right: 16px;
  position: inherit;
  background-color: #464646;
  border-radius: 2px;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  vertical-align: middle;
}

.plate-setup-overlay-radio-container {
  width: 32px;
  height: 32px;
}

.plate-setup-overlay-text-container {
  color: white;
  font-size: 12px;
  line-height: 30px;
  height: 32px;
  font-family: "Roboto", Arial, sans-serif;
  margin: 0 8px;
  flex: 1 1 auto;
}

.plate-setup-overlay-button-container, .plate-setup-overlay-bottom-button-container {
  flex: 0 0 auto;
  display: flex;
  flex: 1 1 0;
}

.plate-setup-button {
  height: 23px;
  font-family: "Roboto", Arial, sans-serif;
  font-size: 12px;
  border: none;
  background-color: white;
  border-radius: 2px;
  margin-right: 4px;
  flex: 1 0 0;
  white-space: nowrap;
}

.plate-setup-clicked-button {
  height: 23px;
  font-family: "Roboto", Arial, sans-serif;
  font-size: 12px;
  border: none;
  background-color: aquamarine;
  border-radius: 2px;
  margin-right: 4px;
  flex: 1 0 0;
  white-space: nowrap;
}


.plate-setup-canvas-container {
  top: 52px;
  left: 16px;
  right: 16px;
  bottom: 10px;
  position: absolute;
}

.plate-setup-tab-container {
  position: absolute;
  top:10px;
  left:10px;
  bottom: 10px;
  right: 10px;
  background-color: white;
  border: solid 1px #e1e1e1;
}

.plate-setup-tab-head {
  left: 0;
  right: 0;
  height: 23px;
  border-bottom: solid 1px #e1e1e1;
  background-color: #f5f5f5;
  display: flex;
}

.plate-setup-tab {
  height: 23px;
  background-color: #ebebeb;
  border-right: solid 1px #e1e1e1;
  cursor: pointer;
  font-family: "Roboto", Arial, sans-serif;
  font-size: 10px;
  text-align: center;
  padding: 5px;
  box-sizing: border-box;
  flex: 1 1 auto;
  white-space: nowrap;
  overflow: hidden;
}

.plate-setup-tab:last-child {
  border-right: none;
}

.plate-setup-tab-selected {
  height: 24px;
  background-color: white;
  color: #00506e;
  flex-shrink: 0;
}

.plate-setup-tab-data-container {
  left: 0;
  right: 0;
  height: 442px;
  border-bottom: solid 1px #e1e1e1;
  position: absolute;
  font-family: "Roboto", Arial, sans-serif;
}

.plate-setup-data-div {
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  background-color: white;
  overflow: auto;
}

.plate-setup-well-attr-container {
  top: 472px;
  left: 0;
  right: 0;
  height: 20px;
  box-sizing: border-box;
  padding: 0px 16px;
  color: #00506e;
  text-align: center;
  position: absolute;
  font-size: 10px;
  font-family: "Roboto", Arial, sans-serif;
}

.plate-setup-preset-container {
  top: 494px;
  left: 0;
  right: 0;
  height: 22px;
  position: absolute;
  box-sizing: border-box;
  padding: 0px 16px;
  text-align: center;
  display: flex;
  justify-content: center;
}

.plate-setup-prest-tab {
  display: inline-block;
  flex-basis: 50px;
  padding: 0 5px;
  margin: 0 1px;
  height: 20px;
  background-color: white;
  border: solid 1px #e1e1e1;
  border-radius: 2px;
  cursor: pointer;
  font-family: "Roboto", Arial, sans-serif;
  font-size: 10px;
  text-align: center;
}

.plate-setup-prest-tab-selected {
  display: inline-block;
  flex-basis: 50px;
  padding: 0 5px;
  margin: 0 1px;
  height: 20px;
  background-color: #e1e1e1;
  border: solid 1px #e1e1e1;
  border-radius: 2px;
  cursor: pointer;
  font-family: "Roboto", Arial, sans-serif;
  font-size: 11px;
  text-align: center;
  color: #00506e;
}

.plate-setup-prest-tab-div {
  padding-top: 3px;
}

.plate-setup-tab-default-field {
  display: flex;
  padding: 16px 16px 0 16px;
}

.plate-setup-tab-field-left-side {
  width: 32px;
}

.plate-setup-tab-field-right-side {
  flex: 1;
}

.plate-setup-tab-name, .plate-setup-tab-name-singleSelect {
  height: 20px;
  font-family: "Roboto", Arial, sans-serif;
  font-size: 12px;
}

.plate-setup-tab-field-container, .plate-setup-tab-field-container-singleSelect {
  width: 100%;
  display: flex;
}

.plate-setup-tab-input, .plate-setup-tab-select-field {
  height: 28px;
  flex: 1 1 auto;
  width: 30px;
  margin: auto;
}

.plate-setup-tab-multiselect-field {
  min-height: 28px;
  flex: 1 1 auto;
  width: 30px;
}

.plate-setup-tab-label-select-field, .plate-setup-tab-unit {
  width: 130px;
  overflow: hidden;
  text-overflow: ellipsis;
  height: 28px;
  box-sizing: border-box;
  padding-left: 5px;
}

.plate-setup-tab-unit {
  font-family: "Roboto", Arial, sans-serif;
  line-height: 26px;
  color: #444;
  white-space: nowrap;
}

.plate-setup-tab-check-box {
  margin-top: 26px;
}

.plate-setup-bottom-control-container {
  top: 10px;
  left: 16px;
  right: 16px;
  background-color: #464646;
  border-radius: 2px;
  position: static;
  display: flex;
  justify-content:space-between;
  align-items: baseline;
  vertical-align: middle;
}

.plate-setup-bottom-container {
  top: 560px;
  left: 0;
  right: 0;
  bottom: 0;
  position: absolute;
  background-color: #e1e1e1;
}

.plate-setup-bottom-table-container {
  max-height: 100%;
  overflow: auto;
}


.plate-setup-bottom-table {
  font-family: "Roboto", Arial, sans-serif;
  font-size: 14px;
  border-collapse: collapse;
  width: 100%;
}

.plate-setup-bottom-table th {
  border: solid #c2c2c2 1px;
  padding: 5px 10px;
  font-weight: bold;
  font-size: 12px;
  text-align: left;
}

.plate-setup-bottom-table td {
  border: solid #c2c2c2 1px;
  padding: 5px 10px;
  background-color: white;
}

.plate-setup-color-text {
  font-size: 12px;
  border: 1px solid gray;
  border-radius: 5px;
  padding: 0px 5px;
  background-color: white;
}

.plate-setup-bottom-id {
  width: 40px;
  text-align: center;
  background-image: linear-gradient(to right, rgba(255,255,255,0.3), transparent)
}

input.invalid {
  background-color: pink;
}

